# TP2-PCS026-SIDATTY

./: .gitignore  README.md  Snakefile  pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
data/raw_sensors/: sensors.parquet
scripts/: generate_synthetic_sensors.py
src/: __init__.py  deep_pinn.py  generate_artefacts.py  hpc_acceleration.py  numerical_core.py  symbolic_derivation.py  visualization.py
tests/: test_core.py  test_deep_pinn.py  test_hpc_acceleration.py  test_numerical_core.py  test_symbolic_derivation.py  test_visualization.py
