[project]
name = "phd-integrator-project"
version = "0.1.0"
description = "TP2 D1 - Du Calcul Symbolique a l'IA Scientifique Multi-GPU avec Automatisation de la Reproductibilite (CI/CD)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "polars>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "numba>=0.59",
    "torch>=2.2",
    "snakemake>=8.0 ; python_version >= '3.11'",
    "pyarrow>=15.0",
    "joblib>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "NPY"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["outputs/", "data/"]

[[tool.mypy.overrides]]
module = ["src.hpc_acceleration"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
